# manual-qa-bot

./: .gitignore  README.md  pyproject.toml
scripts/: chat_test.py  run_app.py
src/manual_qa_bot/: app.py  chat.py  index_manager.py
